PS-2019.1.4 <after@kuba Update PHP.xml

--- a/templates/PHP.xml
+++ b/templates/PHP.xml
@@ -4,4 +4,11 @@
       <option name="PHP" value="true" />
     </context>
   </template>
+  <template name="kp" value="'$KEY$' =&gt; '$VALUE$',&#10;$END$" description="key value pair" toReformat="false" toShortenFQNames="true">
+    <variable name="KEY" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="VALUE" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="PHP" value="true" />
+    </context>
+  </template>
 </templateSet>
