--- a/templates/HTML_XML.xml
+++ b/templates/HTML_XML.xml
@@ -8,11 +8,6 @@
       <option name="JSP" value="true" />
     </context>
   </template>
-  <template name="php/" value="&lt;?php $END$ ?&gt;" description="PHP tag" toReformat="false" toShortenFQNames="true">
-    <context>
-      <option name="HTML" value="true" />
-    </context>
-  </template>
   <template name="php=" value="&lt;?= $END$ ?&gt;" description="PHP short tag" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="HTML" value="true" />
@@ -21,6 +16,12 @@
   <template name="forek" value="&lt;?php foreach ($array as $key =&gt; $value): ?&gt;&#10;    $END$&#10;&lt;?php endforeach ?&gt;" description="&lt;?php foreach ($array as $key =&gt; $value) ?&gt; ... &lt;?php endforeach ?&gt;" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="HTML" value="true" />
+    </context>
+  </template>
+  <template name="var" value="&lt;?= $END$ ?&gt;" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="HTML" value="true" />
+      <option name="PHP" value="true" />
     </context>
   </template>
 </templateSet>
