--- a/templates/HTML_XML.xml
+++ b/templates/HTML_XML.xml
@@ -18,7 +18,7 @@
       <option name="HTML" value="true" />
     </context>
   </template>
-  <template name="var" value="&lt;?= $END$ ?&gt;" toReformat="false" toShortenFQNames="true">
+  <template name="var" value="&lt;?= $END$ ?&gt;" description="" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="HTML" value="true" />
       <option name="PHP" value="true" />
